header visual bugfix (border visible when closed)

--- a/src/scss/components/_site-header.scss
+++ b/src/scss/components/_site-header.scss
@@ -46,11 +46,15 @@
   }
 
   &.is-open {
-    position: absolute;
+    position: fixed;
 
     .k-header {
       &--nav {
         transform: translateY(0);
+
+        &__content {
+          border-bottom: 0.125em solid $primary;
+        }
       }
 
       &--navtoggle {
@@ -122,7 +126,6 @@
 
     &__content {
       padding: 2em 5% 2em 5%;
-      border-bottom: 0.125em solid $primary;
     }
 
     ul {
